# syngraph

./: .gitignore  README.md  pyproject.toml
syngraph/: __main__.py  functions.py  utils.py
