[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syngraph"
version = "0.2.1"
description = "Syntenic ortholog clustering via graph connected components"
authors = [
    {name = "tamasakian", email = "tamasakian@gmail.com"}
]
dependencies = [
    "networkx >= 3.5",
]
readme = "README.md"
